working on fixing Labels and showing Completed_Date__c

--- a/force-app/main/default/classes/TaskService.cls
+++ b/force-app/main/default/classes/TaskService.cls
@@ -15,6 +15,7 @@ public class TaskService {
             'OwnerId',
             'CreatedById',
             'CreatedDate',
+            'Completed_Date__c',
             'ActivityDate',
             'Task_Code__c',
             'WhatId'
