add Trigger PSE and PE.

--- a/force-app/main/default/classes/TherapeuticAreaService.cls
+++ b/force-app/main/default/classes/TherapeuticAreaService.cls
@@ -3,42 +3,106 @@
  */
 public with sharing class TherapeuticAreaService {
 
-    public static void validationOnDuplicate(List<Therapeutic_Area_Patient__c> areaPatients) {
-        Set<Id> newParticipantIdSet = new Set<Id>();
-        Set<Id> newTherapeuticAreaId = new Set<Id>();
-        Set<TherapeuticAreaWrapper> dbWrapper = new Set<TherapeuticAreaWrapper>();
-        Set<TherapeuticAreaWrapper> newWrapper = new Set<TherapeuticAreaWrapper>();
+    public static void deleteTherapeuticAreaPatientFromPSE(List<Participant_Study_Enrollment__c> newPSEs,
+            Map<Id, Participant_Study_Enrollment__c> oldPSEMap) {
+        System.debug('deleteTherapeuticAreaPatientFromPSE');
+        List<Participant_Study_Enrollment__c> changeList = new List<Participant_Study_Enrollment__c>();
 
-        for (Therapeutic_Area_Patient__c newAreaPatient : areaPatients) {
-            TherapeuticAreaWrapper iKey = new TherapeuticAreaWrapper(newAreaPatient.Participant__c, newAreaPatient.Therapeutic_Area__c);
-            if (newWrapper.contains(iKey)) {
-                newAreaPatient.addError('Duplicate Therapeutic Area Patient');
-            } else {
-                newParticipantIdSet.add(newAreaPatient.Participant__c);
-                newTherapeuticAreaId.add(newAreaPatient.Therapeutic_Area__c);
-                newWrapper.add(iKey);
+        for (Participant_Study_Enrollment__c newPSE : newPSEs) {
+            if (newPSE.Status__c != oldPSEMap.get(newPSE.Id).Status__c) {
+                if (oldPSEMap.get(newPSE.Id).Status__c == 'Enrolled') {
+                    changeList.add(newPSE);
+                }
             }
         }
-
-        for (Therapeutic_Area_Patient__c dbAreaPatient: [
-                SELECT
-                        Participant__c,
-                        Therapeutic_Area__c
-                FROM Therapeutic_Area_Patient__c
-                WHERE Participant__c IN :newParticipantIdSet
-                AND Therapeutic_Area__c IN :newTherapeuticAreaId
-        ]) {
-            dbWrapper.add(new TherapeuticAreaWrapper(dbAreaPatient.Participant__c, dbAreaPatient.Therapeutic_Area__c));
-        }
-
-        for (Therapeutic_Area_Patient__c newAreaPatient : areaPatients) {
-            TherapeuticAreaWrapper iKey = new TherapeuticAreaWrapper(newAreaPatient.Participant__c, newAreaPatient.Therapeutic_Area__c);
-            if (dbWrapper.contains(iKey)) {
-                newAreaPatient.addError('You are inserting Duplicate Therapeutic Area Patient');
+        if (!changeList.isEmpty()) {
+            Set<Id> participantId = new Set<Id>();
+            for (Participant_Study_Enrollment__c newPSE : changeList) {
+                participantId.add(newPSE.Participant__c);
             }
+            deleteTherapeuticAreaPatient(participantId);
         }
     }
 
+    public static void deleteTherapeuticAreaPatientFromPE(List<Participant_Enrollment__c> newPE,
+            Map<Id, Participant_Enrollment__c> oldPEMap) {
+        System.debug('deleteTherapeuticAreaPatientFromPE');
+
+        List<Participant_Enrollment__c> changeList = new List<Participant_Enrollment__c>();
+
+        for (Participant_Enrollment__c participantEnrollment : newPE) {
+            if (participantEnrollment.Participant_Status__c != oldPEMap.get(participantEnrollment.Id).Participant_Status__c) {
+                if (oldPEMap.get(participantEnrollment.Id).Participant_Status__c == ParticipantEnrollmentService.PART_STATUS_REFERRAL_SENT_TO_PI ||
+                        oldPEMap.get(participantEnrollment.Id).Participant_Status__c == 'Enrollment Success') {
+                    if (participantEnrollment.Participant_Status__c != ParticipantEnrollmentService.PART_STATUS_REFERRAL_SENT_TO_PI
+                            && participantEnrollment.Participant_Status__c != 'Enrollment Success') {
+                        changeList.add(participantEnrollment);
+                    }
+                }
+            }
+        }
+        if (!changeList.isEmpty()) {
+            Set<Id> participantId = new Set<Id>();
+            for (Participant_Enrollment__c enrollment : changeList) {
+                participantId.add(enrollment.Participant__c);
+            }
+            deleteTherapeuticAreaPatient(participantId);
+        }
+    }
+
+    public static void validationOnDuplicate(List<Therapeutic_Area_Patient__c> areaPatients) {
+//        System.debug('validationOnDuplicate count: ' + areaPatients.size());
+//        Set<Id> newParticipantIdSet = new Set<Id>();
+//        Set<Id> newTherapeuticAreaId = new Set<Id>();
+//        Set<TherapeuticAreaWrapper> dbWrapper = new Set<TherapeuticAreaWrapper>();
+//        Set<TherapeuticAreaWrapper> newWrapper = new Set<TherapeuticAreaWrapper>();
+//
+//        for (Therapeutic_Area_Patient__c newAreaPatient : areaPatients) {
+//            TherapeuticAreaWrapper iKey = new TherapeuticAreaWrapper(newAreaPatient.Participant__c, newAreaPatient.Therapeutic_Area__c);
+//            if (newWrapper.contains(iKey)) {
+//                newAreaPatient.addError('Duplicate Therapeutic Area Patient');
+//            } else {
+//                newParticipantIdSet.add(newAreaPatient.Participant__c);
+//                newTherapeuticAreaId.add(newAreaPatient.Therapeutic_Area__c);
+//                newWrapper.add(iKey);
+//            }
+//        }
+//
+//        System.debug('validationOnDuplicate newWrapper count: ' + newWrapper.size());
+//        for (Therapeutic_Area_Patient__c dbAreaPatient : [
+//                SELECT
+//                        Participant__c,
+//                        Therapeutic_Area__c
+//                FROM Therapeutic_Area_Patient__c
+//                WHERE Participant__c IN :newParticipantIdSet
+//                AND Therapeutic_Area__c IN :newTherapeuticAreaId
+//        ]) {
+//            dbWrapper.add(new TherapeuticAreaWrapper(dbAreaPatient.Participant__c, dbAreaPatient.Therapeutic_Area__c));
+//        }
+//        System.debug('validationOnDuplicate dbWrapper count: ' + dbWrapper.size());
+//
+//
+//        for (Therapeutic_Area_Patient__c newAreaPatient : areaPatients) {
+//            TherapeuticAreaWrapper iKey = new TherapeuticAreaWrapper(newAreaPatient.Participant__c, newAreaPatient.Therapeutic_Area__c);
+//            if (dbWrapper.contains(iKey)) {
+//                newAreaPatient.addError('You are inserting Duplicate Therapeutic Area Patient');
+//                System.debug('validationOnDuplicate duplicate: ' + newAreaPatient);
+//            }
+//        }
+    }
+
+    private static void deleteTherapeuticAreaPatient(Set<Id> participantId) {
+        System.debug('deleteTherapeuticAreaPatient count:' + participantId.size());
+        List<Therapeutic_Area_Patient__c> areaPatients = [
+                SELECT Id
+                FROM Therapeutic_Area_Patient__c
+                WHERE Participant__c IN :participantId
+                AND IsRelatedToStudy__c = TRUE
+        ];
+        if (!areaPatients.isEmpty()) {
+            delete areaPatients;
+        }
+    }
 
     public class TherapeuticAreaWrapper {
         public Id participantId;
@@ -49,13 +113,14 @@ public with sharing class TherapeuticAreaService {
             this.therapeuticAreaId = therapeuticAreaId;
         }
 
-        public Boolean equals(Object obj) {
+        public  Boolean equals(Object obj) {
             if (obj instanceof TherapeuticAreaWrapper) {
                 TherapeuticAreaWrapper wrapper = (TherapeuticAreaWrapper) obj;
                 return ((participantId == wrapper.participantId) && (therapeuticAreaId == wrapper.therapeuticAreaId));
             }
             return false;
         }
+
         public override Integer hashCode() {
             return (System.hashCode(String.valueOf(participantId)) * 2) ^ System.hashCode(String.valueOf(therapeuticAreaId));
         }
