add calculate method after update publish data Articles.

--- a/force-app/main/default/classes/ResourceTriggerHandler.cls
+++ b/force-app/main/default/classes/ResourceTriggerHandler.cls
@@ -5,6 +5,11 @@
 public with sharing class ResourceTriggerHandler extends TriggerHandler {
 
     public override void beforeInsert(List<SObject> newList) {
-        ArticleService.calculateExpirationDate(newList);
+        ArticleService.calculateExpirationDateBeforeInsert(newList);
     }
+
+    public override void beforeUpdate(List<SObject> newList, Map<Id, SObject> oldMap) {
+        ArticleService.calculateExpirationDateBeforeUpdate(newList, (Map<Id, Resource__c>) oldMap);
+    }
+
 }
