added ResourceRemoteTest.cls, changed languages in Clinical_Trial_Profiles test data

--- a/force-app/main/default/classes/DatabaseProxy.cls
+++ b/force-app/main/default/classes/DatabaseProxy.cls
@@ -3,4 +3,12 @@ public with sharing class DatabaseProxy {
 	public List<SObject> query(String query) {
 		return Database.query(query);
 	}
+
+	public void upsertRecord(SObject record) {
+		upsert record;
+	}
+
+	public void upsertRecords(List<SObject> records) {
+		upsert records;
+	}
 }
